# advent_of_code_2018

./: .gitignore  Readme.md
01/: Cargo.toml  solution_1.py  solution_2.py
01/src/: lib.rs  main.rs
02/: Cargo.toml  solution_1.py  solution_2.py
02/src/: lib.rs  main.rs
03/: Cargo.toml  Subject.md
03/src/: lib.rs  main.rs  parse.rs  vec2d.rs
04/: Cargo.toml  Subject.md  input
04/src/: lib.rs  main.rs  parse.rs
05/: Cargo.toml
05/src/: lib.rs  main.rs
06/: Cargo.toml
06/src/: lib.rs  main.rs
07/: Cargo.toml  Subject.md  Subject_2.md
07/src/: lib.rs  main.rs
08/: Cargo.toml
08/src/: lib.rs  main.rs
09/: Cargo.toml  Subject.md  Subject_2.md
09/src/: lib.rs  main.rs
10/: Cargo.toml  Subject.md  Subject_2.md
10/src/: lib.rs  main.rs
11/: Cargo.toml  Subject.md  Subject_2.md
11/src/: lib.rs  main.rs
12/: Cargo.toml  Subject.md  Subject_2.md
12/src/: lib.rs  main.rs
13/: Cargo.toml  Subject.md  Subject_2.md
13/src/: lib.rs  main.rs
14/: Cargo.toml  Subject.md  Subject_2.md
14/src/: lib.rs  main.rs
15/: Cargo.toml  Subject.md  Subject_2.md
15/src/: lib.rs  main.rs  path.rs
16/: Cargo.toml  Subject.md  Subject_2.md
16/src/: lib.rs  main.rs
17/: Cargo.toml  Subject.md  Subject_2.md  test_input2
17/src/: lib.rs  main.rs
18/: Cargo.toml  Subject.md
18/src/: lib.rs  main.rs
19/: Cargo.toml  Subject.md  Subject_2.md  decoded_input
19/src/: lib.rs  main.rs  ops.rs
